# Rawst

./: .gitignore  Cargo.toml  Manual_Usuario_RusterAPI.md  Proyecto_Integrado_DAM_RusterAPI.md  README.md  package-lock.json  package.json  xd
frontend/: index.html  package.json  (+5 more)
src/: Cargo.toml  error.rs  lib.rs  main.rs
src/api/: datasource_integration.rs
src/api/adapters/: api_adapter.rs  api_handlers.rs
src/api/common/: api_entity.rs
src/api/handlers/: api_handlers.rs  manager.rs
src/api/handlers/common/: utils.rs
src/api/handlers/crud/: create.rs  delete.rs  list.rs  read.rs  update.rs
src/api/handlers/custom/: routes.rs
src/api/rocket/: rocket_adapter.rs
src/api/rocket/handlers/: catch_all.rs  catch_all_test.rs
src/api/rocket/tests/: catch_all_test.rs  rocket_adapter_test.rs
src/config/: api_config.rs  auth_config.rs  configuration.rs  cors_config.rs  database_config.rs  documentation_config.rs  entity_config.rs  server_config.rs  shared.rs
src/config/specific/: api_config.rs  cors_config.rs  database_config.rs  documentation_config.rs
src/connection/: connection_manager.rs
src/data/: data_error.rs  datasource.rs  datasource_factory.rs  mod.rs
src/data/databases/: database_datasource.rs  mod.rs
src/data/datasource/: base.rs  datasource.rs  mod.rs  relationaldb_ds.rs
src/data/datasource/document/: base.rs
src/data/datasource/file/: base.rs  csv.rs
src/data/datasource/relational/: base.rs  mariadb.rs
src/data/datasource/relational/tests/: mariadb_test.rs
src/filemanager/: directory.rs  file.rs
src/gui/: editor.rs  gui.rs  home.rs  mod.rs  request.rs  styling.rs
src/gui/appareance/: colors.rs  theme.rs
src/gui/appareance/theme/: button.rs
src/gui/styles/: button_styles.rs  mod.rs
src/gui/widgets/: mod.rs  request_button.rs  requests_column.rs  tab_button.rs
src/request_manager/: curl.rs  mod.rs  request.rs
src/serialization/: serialization_service.rs
(+54 files in other folders)
