[package]
name = "rawst"
version = "0.1.0"
edition = "2021"

[lib]
name = "rawst"
path = "lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
whoami = "1.5.2"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
mongodb = "3.2.3"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "mysql",
    "sqlite",
    "postgres",
] }
serde_json = "1.0"
thiserror = "1.0"
rocket = { version = "0.5.1", features = ["json"] }

[dev-dependencies]
mockall = "0.11.3"
tokio-test = "0.4.2" 